<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.arthas.lefrango.ui.login.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLoginTitle"
                style="@style/Medium.23.TextAppColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="90dp"
                android:text="@string/sign_in"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toTopOf="@id/tvLoginSubTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLoginTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLoginSubTitle"
                style="@style/Regular.13.GrayTextAppColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="120dp"
                android:layout_marginEnd="16dp"
                android:text="@string/login_screen_desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLoginTitle"
                tools:layout_editor_absoluteY="235dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTC"
                style="@style/LeFrango.TextInputLayout"
                errorText="@{viewModel.tcValidationError}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/tckn"
                app:errorEnabled="true"
                app:errorTextColor="@android:color/holo_red_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLoginSubTitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTC"
                    style="@style/LeFrango.Edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="11"
                    android:text="@={viewModel.tc}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                style="@style/LeFrango.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/password"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilTC"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/toggle_tint_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    style="@style/LeFrango.Edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvForgetPassword"
                style="@style/Medium.13.TextAppColor"
                onSingleClick="@{viewModel.onForgotPassword}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/forgot_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilPassword" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                style="@style/LeFrangoSolidButton"
                onSingleClick="@{viewModel.onLogin}"
                android:layout_width="200dp"
                android:layout_height="42dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="200dp"
                android:enabled="@{viewModel.isEnabledLoginButton()}"
                android:text="@string/login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvForgetPassword" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Medium.13.TextAppColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="12dp"
                android:text="@string/dont_have_an_account"
                app:layout_constraintBottom_toTopOf="@id/btnRegister"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnLogin" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRegister"
                style="@style/LeFrangoOutlinedButton"
                onSingleClick="@{viewModel.onRegister}"
                android:layout_width="200dp"
                android:layout_height="42dp"
                android:layout_marginTop="42dp"
                android:text="@string/register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnLogin" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>