<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.arthas.lefrango.ui.signup.SignupViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            onSingleClick="@{viewModel.onBack}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSignupTitle"
                style="@style/Medium.23.TextAppColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:text="@string/sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_goneMarginTop="20dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSignupSubTitle"
                style="@style/Regular.13.TextAppColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="@string/signup_screen_desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSignupTitle" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTC"
                style="@style/LeFrango.TextInputLayout"
                errorText="@{viewModel.tcValidationError}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/tckn"
                app:errorEnabled="true"
                app:errorTextColor="@android:color/holo_red_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSignupSubTitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTC"
                    style="@style/LeFrango.Edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="11"
                    android:text="@={viewModel.tc}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilName"
                style="@style/LeFrango.TextInputLayout"
                errorText="@{viewModel.nameEmptyError}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/name"
                app:errorEnabled="true"
                app:errorTextColor="@android:color/holo_red_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilTC">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    style="@style/LeFrango.Edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textCapWords"
                    android:text="@={viewModel.name}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilSurname"
                style="@style/LeFrango.TextInputLayout"
                errorText="@{viewModel.surNameEmptyError}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/surname"
                app:errorEnabled="true"
                app:errorTextColor="@android:color/holo_red_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSurname"
                    style="@style/LeFrango.Edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textCapWords"
                    android:text="@={viewModel.surname}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilBirthDate"
                style="@style/LeFrango.TextInputLayout"
                errorText="@{viewModel.birthDateValidationError}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/birthdate"
                app:errorEnabled="true"
                app:errorTextColor="@android:color/holo_red_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilSurname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etBirthDate"
                    style="@style/LeFrango.Edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:text="@={viewModel.birthDate}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                style="@style/LeFrango.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilBirthDate"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/toggle_tint_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    style="@style/LeFrango.Edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv8digitsCheck"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="12dp"
                android:src="@{viewModel.is8digits() == true ? @drawable/ic_check_green : @drawable/ic_check_gray}"
                app:layout_constraintBottom_toTopOf="@id/cbUserAgreement"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilPassword" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv8digitsCheck"
                style="@style/Regular.12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/password_length_validation"
                android:textColor="@{viewModel.is8digits() == true ? @color/text_app_color : @color/gray_app_color}"
                app:layout_constraintBottom_toBottomOf="@+id/iv8digitsCheck"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv8digitsCheck"
                app:layout_constraintTop_toTopOf="@+id/iv8digitsCheck" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cbUserAgreement"
                style="@style/LeFrango.Checkbox"
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:checked="@={viewModel.isAcceptUserAgreement}"
                app:layout_constraintEnd_toStartOf="@+id/tvUserAgreement"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv8digitsCheck" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUserAgreement"
                style="@style/Regular.12.TextAppColor"
                onSingleClick="@{viewModel.onUserAgreement}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/user_agreement_text"
                app:layout_constraintBottom_toBottomOf="@+id/cbUserAgreement"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cbUserAgreement"
                app:layout_constraintTop_toBottomOf="@+id/tilPassword"
                app:layout_constraintTop_toTopOf="@+id/cbUserAgreement" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignup"
                onSingleClick="@{viewModel.onRegister}"
                android:layout_width="200dp"
                android:layout_height="42dp"
                android:layout_marginTop="18dp"
                android:background="@{viewModel.isEnabledRegisterButton ? @drawable/bg_button_solid : @drawable/bg_button_outlined}"
                android:enabled="@{viewModel.isEnabledRegisterButton()}"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@{viewModel.isEnabledRegisterButton ? @color/white : @color/dark_app_color}"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cbUserAgreement" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>