<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.arthas.lefrango.ui.forgotpass.email.ForgotPassEmailVMState" />

        <variable
            name="viewModel"
            type="com.arthas.lefrango.ui.forgotpass.email.ForgotPassEmailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_background2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                onSingleClick="@{viewModel.onBack}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvForgotPassTitle"
                style="@style/Medium.23.DarkAppColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="4dp"
                android:text="@string/forgot_password_title"
                app:layout_constraintBottom_toTopOf="@+id/tvForgotPassSubTitle"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvForgotPassSubTitle"
                style="@style/Regular.13.TextAppColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/forgot_password_subtitle"
                app:layout_constraintBottom_toTopOf="@+id/tilTC"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTC"
                style="@style/LeFrango.TextInputLayout"
                errorText="@{viewModel.emailValidationError}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/email"
                app:errorEnabled="true"
                app:errorTextColor="@android:color/holo_red_dark"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTC"
                    style="@style/LeFrango.Edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.email}" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSend"
                style="@style/LeFrangoSolidButton"
                onSingleClick="@{viewModel.onSend}"
                android:layout_width="200dp"
                android:layout_height="42dp"
                android:layout_marginTop="24dp"
                android:enabled="@{viewModel.isEnabledSendButton()}"
                android:text="@string/send"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilTC" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/layoutForgotPassCheckMail"
            layout="@layout/layout_forgot_pass_check_mail"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:viewModel="@{viewModel}" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>